Add oauth2 resource server authentication
