# escuagest-api/src/main/java/com/escualos/api/user/UserApiDelegateImpl.java
@@ -3,6 +3,7 @@ package com.escualos.api.user;
 import com.escualos.api.UserApiDelegate;
 import com.escualos.domain.user.User;
 import com.escualos.domain.user.UserRepository;
+import com.escualos.domain.user.UserRoles;
 import com.escualos.model.CreateUserRequest;
 import com.escualos.model.UserResponse;
 import org.springframework.http.ResponseEntity;
@@ -10,6 +11,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
+import javax.annotation.security.RolesAllowed;
 import java.net.URI;
 
 @Component
@@ -22,17 +24,25 @@ public class UserApiDelegateImpl implements UserApiDelegate {
     }
 
     @Override
+    @RolesAllowed(UserRoles.SWIMMER_READ)
     public Mono<ResponseEntity<UserResponse>> getUserByName(String username, ServerWebExchange exchange) {
         return UserApiDelegate.super.getUserByName(username, exchange);
     }
 
     @Override
+    @RolesAllowed(UserRoles.SWIMMER_READ)
     public Mono<ResponseEntity<UserResponse>> getUserById(String id, ServerWebExchange exchange) {
-        return UserApiDelegate.super.getUserById(id, exchange);
+        return userRepository
+                .findById(id)
+                .map(user -> new UserResponse()
+                        .username(user.getUsername())
+                        .fullname(user.getFullname())
+                        .id(user.getId()))
+                .map(ResponseEntity::ok);
     }
 
-
     @Override
+    @RolesAllowed(UserRoles.SWIMMER_WRITE)
     public Mono<ResponseEntity<UserResponse>> postNewUser(Mono<CreateUserRequest> createUserRequest, ServerWebExchange exchange) {
         return createUserRequest
             .map(createUser -> User.builder()
